<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_in_maps"
        android:title="@string/open_in_google_maps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_link_to_element"
        android:icon="@drawable/ic_link_small"
        android:title="@string/media_action_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_linked_items"
        android:title="@string/media_action_view_links"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unlink"
        android:title="@string/media_action_unlink"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
